Fix font issues on safari

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -16,7 +16,7 @@
   list-style: none;
   align-items: center;
   padding: 0 25px;
-  font-family: "SF Pro Display", serif;
+  font-family: SF Pro Display Bold, serif;
   font-weight: bold;
   font-size: 18px;
   align-content: center;
