--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -50,7 +50,7 @@
 
 #info-description {
   text-align: center;
-  font-family: SF Pro Display, serif;
+  font-family: SF Pro Display Regular, serif;
   font-size: 20px;
   color: #E8DBC5;
   margin: 0 50px;
